# wordy

./: .gitignore  Cargo.toml
benches/: benchmarks.rs
resources/: New Tab.html  dict.txt  dictionary.txt  test.txt
results/: entropy_2.txt  naive_1.txt
src/: algorithms.rs  data.rs  lib.rs  main.rs
src/algorithms/: entropy.rs  naive.rs
src/data/: initialisation.rs  mod.rs
