[package]
name = "wordy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.30", features = ["derive"] }
flate2 = "1.0.35"
itertools = "0.14.0"
regex = "1.11.1"
# fancy-regex = "0.14.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"]}

[profile.release]
debug = true

[[bench]]
name = "benchmarks"
harness = false